# Peer-to-Peer-OpenGL-Whiteboard-Application

./: .gitignore  CMakeLists.txt  README.md  makefile
GUI/: Interface.pro  interface.cpp  interface.h  interface.ui  main.cpp
Peer-to-Peer-OpenGL-Whiteboard-Application/: ConcurrentContainer.h  ConcurrentQueue.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  DrawAction.h  Globals.cpp  Globals.h  Main.cpp  Peer-to-Peer-OpenGL-Whiteboard-Application - Shortcut.lnk  Peer-to-Peer-OpenGL-Whiteboard-Application.qtvscr  Peer-to-Peer-OpenGL-Whiteboard-Application.sln  Peer-to-Peer-OpenGL-Whiteboard-Application.vcxproj  Peer-to-Peer-OpenGL-Whiteboard-Application.vcxproj.filters  Server.cpp  Server.h  SessionCode.cpp  SessionCode.h  Source.h  Whiteboard.cpp  Whiteboard.h  clientinterface.cpp  clientinterface.h  main.cpp
Peer-to-Peer-OpenGL-Whiteboard-Application/GUI code/: clientinterface.cpp  clientinterface.h
Peer-to-Peer-OpenGL-Whiteboard-Application/UI/: ClientInterface.pro  Interface.cpp  Interface.h  Interface.pro  Interface.qtvscr  Interface.ui  UI_Interface.h  clientinterface.cpp  clientinterface.h  clientinterface.ui  ui_clientinterface.h
